--- a/Assign.4-Jupyter.ipynb
+++ b/Assign.4-Jupyter.ipynb
@@ -65,55 +65,7 @@
       "66          Sweden       Yes          1\n",
       "37          Israel       Yes          1\n",
       "5     Bahamas, The       Yes          1\n",
-      "54          Poland       Yes          1\n",
-      "                   Country  treatment\n",
-      "44           United States        562\n",
-      "43          United Kingdom        159\n",
-      "6                   Canada         63\n",
-      "16                 Germany         41\n",
-      "27             Netherlands         24\n",
-      "20                 Ireland         24\n",
-      "14                  France         13\n",
-      "0                Australia         13\n",
-      "19                   India         10\n",
-      "22                   Italy          7\n",
-      "28             New Zealand          6\n",
-      "4                   Brazil          6\n",
-      "32                  Poland          6\n",
-      "38            South Africa          6\n",
-      "40                  Sweden          6\n",
-      "2                  Belgium          6\n",
-      "41             Switzerland          5\n",
-      "5                 Bulgaria          4\n",
-      "36               Singapore          4\n",
-      "21                  Israel          4\n",
-      "35                  Russia          3\n",
-      "25                  Mexico          3\n",
-      "13                 Finland          3\n",
-      "1                  Austria          3\n",
-      "17                  Greece          2\n",
-      "12                 Denmark          2\n",
-      "10                 Croatia          2\n",
-      "8                 Colombia          2\n",
-      "33                Portugal          2\n",
-      "39                   Spain          1\n",
-      "34                 Romania          1\n",
-      "42                Thailand          1\n",
-      "37                Slovenia          1\n",
-      "45                 Uruguay          1\n",
-      "23                   Japan          1\n",
-      "31             Philippines          1\n",
-      "30                  Norway          1\n",
-      "29                 Nigeria          1\n",
-      "26                 Moldova          1\n",
-      "24                  Latvia          1\n",
-      "18                 Hungary          1\n",
-      "15                 Georgia          1\n",
-      "11          Czech Republic          1\n",
-      "9               Costa Rica          1\n",
-      "7                    China          1\n",
-      "3   Bosnia and Herzegovina          1\n",
-      "46                Zimbabwe          1\n"
+      "54          Poland       Yes          1\n"
      ]
     }
    ],
@@ -131,7 +83,7 @@
     "print(yes_help)\n",
     "# print(no_help)\n",
     "# print(dontknow_help)\n",
-    "print(notefficent_grouped)"
+    "# print(notefficent_grouped)"
    ]
   },
   {
@@ -175,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
